--- a/MyPokenmon.Application/MyPokemon.Application.csproj
+++ b/MyPokenmon.Application/MyPokemon.Application.csproj
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MyPokemon.Domain\MyPokemon.Domain.csproj" />
     <ProjectReference Include="..\MyPokemon.Infrastructure\MyPokemon.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pokemon\Commands\" />
   </ItemGroup>
 
 </Project>
