fn get pokemon by type

--- a/MyPokenmon.Application/MyPokemon.Application.csproj
+++ b/MyPokenmon.Application/MyPokemon.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\MyPokemon.Infrastructure\MyPokemon.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Ptypes\Commands\" />
+  </ItemGroup>
+
 </Project>
